--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,4 +1,15 @@
 org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 android.useAndroidX=true
 kotlin.code.style=official
-MAPBOX_DOWNLOADS_TOKEN=YOUR_MAPBOX_DOWNLOADS_TOKEN
+
+# Enable KSP
+ksp.useKSP2=true
+
+# Gradle optimizations
+org.gradle.caching=true
+org.gradle.parallel=true
+org.gradle.configureondemand=true
+
+# Android build optimizations
+android.nonTransitiveRClass=false
+android.defaults.buildfeatures.buildconfig=true
