--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,267 @@
+# ============================================
+# Operating System Files
+# ============================================
+
 # macOS
 .DS_Store
 .AppleDouble
 .LSOverride
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+.AppleDB
+.AppleDesktop
+.Network Trash Folder
+.Temporary Items
+.apdisk
+
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+*.cab
+*.msi
+*.msix
+*.msm
+*.msp
+
+# Linux
+*~
+.fuse_hidden*
+.directory
+.Trash-*
+.nfs*
+
+# ============================================
+# IDE & Editor Files
+# ============================================
 
 # Xcode
-ios/*.xcodeproj/project.xcworkspace/xcuserdata
-ios/*.xcodeproj/xcuserdata/
-ios/DerivedData/
-ios/*.moved-aside
-ios/*.pbxuser
-ios/*.mode1v3
-ios/*.mode2v3
-ios/*.perspectivev3
-ios/**/*拼接/
-ios/**/*scons/
-ios/**/*sconsign/
-ios/build/
-ios/*.build
+*.xcuserstate
+*.xcuserdata/
+*.xccheckout
+*.moved-aside
+*.hmap
+*.xcscmblueprint
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
 
-# Android
-android/.gradle/
-android/build/
-android/app/build/
-android/.idea/
-android/*.iml
-android/local.properties
-android/.externalNativeBuild
-android/captures/
-android/app/release/
+# Xcode Patch
+*.xcodeproj/*
+!*.xcodeproj/project.pbxproj
+!*.xcodeproj/xcshareddata/
+!*.xcodeproj/project.xcworkspace/contents.xcworkspadata
+!*.xcworkspace/contents.xcworkspadata
 
-# User-specific files
-*.swp
-*.swo
-*~
+# Android Studio
 .idea/
+*.iml
+local.properties
+*.apk
+*.aab
+*.ap_
+*.dex
+
+# VS Code
+.vscode/
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+# JetBrains IDEs
+*.iws
+*.ipr
+out/
+
+# Sublime Text
 *.sublime-project
 *.sublime-workspace
+*.sublime-settings
 
-# Font files (too large for git, should be added manually)
-ios/*.ttf
+# Vim
+*.swp
+*.swo
+*.swn
+
+# Emacs
+\#*\#
+/.emacs.desktop
+/.emacs.desktop.lock
+auto-save-list
+tramp
+*~
+
+# ============================================
+# Build Artifacts
+# ============================================
+
+# iOS
+DerivedData/
+build/
+*.build/
+*.ipa
+*.dSYM.zip
+*.dSYM
+
+# Android
+intermediates/
+
+# Gradle
+gradle-app.setting
+!gradle-wrapper.jar
+.gradletasknamecache
+
+# Swift Package Manager
+.build/
+Packages/
+Package.pins
+Package.resolved
+
+# CocoaPods
+Pods/
+Podfile.lock
+
+# Carthage
+Carthage/Build/
+Carthage/Checkouts/
+
+# ============================================
+# Package Managers
+# ============================================
+
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+package-lock.json
+yarn.lock
+.pnpm-debug.log*
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+venv/
+ENV/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# Ruby
+*.gem
+*.rbc
+/.config
+/coverage/
+/InstalledFiles
+/pkg/
+/spec/reports/
+/spec/examples.txt
+/test/tmp/
+/test/version_tmp/
+
+# ============================================
+# Sensitive & Personal Files
+# ============================================
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Keys & Certificates
+*.pem
+*.key
+*.cert
+*.p12
+*.pfx
+*.cer
+*.crt
+*.keystore
+*.jks
+
+# Secrets
+secrets/
+*.secret
+credentials.json
+credentials.yaml
+
+# ============================================
+# Large Files & Media
+# ============================================
+
+# Font files (too large for git, should be added manually or use Git LFS)
+*.ttf
+*.otf
+*.woff
+*.woff2
+*.eot
+
+# Archives
+*.zip
+*.tar
+*.tar.gz
+*.rar
+*.7z
+
+# Images (unless necessary)
+*.psd
+*.ai
+*.sketch
+
+# ============================================
+# Temporary & Backup Files
+# ============================================
+
+# Backup files
+*.bak
+*.backup
+*.old
+*.orig
+*.rej
+
+# Temporary files
+*.tmp
+*.temp
+*.cache
+*.pid
+*.seed
+*.pid.lock
+
+# ============================================
+# Other
+# ============================================
+
+# Git LFS
+*.gitattributes
+```
