--- a/ios/Podfile
+++ b/ios/Podfile
@@ -2,17 +2,18 @@ platform :ios, '15.0'
 
 target 'RunningOS' do
   use_frameworks!
-
-  # AMap SDKs
-  pod 'AMapFoundation'
-  pod 'AMap3DMap'
-
 end
 
 post_install do |installer|
   installer.pods_project.targets.each do |target|
     target.build_configurations.each do |config|
       config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '15.0'
+      # Fix for Apple Silicon Macs - remove arm64 exclusion for simulator
+      config.build_settings['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = ''
     end
+  end
+  installer.pods_project.build_configurations.each do |config|
+    # Also fix the project level configuration
+    config.build_settings['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = ''
   end
 end
