chore: add .worktrees/ to .gitignore
Prevents worktree contents from being tracked in main repository

--- a/.gitignore
+++ b/.gitignore
@@ -104,6 +104,13 @@ tramp
 *~
 
 # ============================================
+# Development Workspaces
+# ============================================
+
+.worktrees/
+worktrees/
+
+# ============================================
 # Build Artifacts
 # ============================================
 
