--- a/ios/RunningOS.xcworkspace/xcshareddata/xcschemes/RunningOS.xcscheme
+++ b/ios/RunningOS.xcworkspace/xcshareddata/xcschemes/RunningOS.xcscheme
@@ -59,7 +59,7 @@
       </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
-      buildConfiguration = "Release"
+      buildConfiguration = "Debug"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
